fix docker github actions

--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -40,13 +40,17 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.prod
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            NODE_ENV=production
+            BUILD_DATE={{date 'YYYY-MM-DDTHH:mm:ssZ'}}
+            GIT_SHA=${{ github.sha }}
+            GIT_REF=${{ github.ref_name }}
 
       - name: Generate deployment summary
         run: |
